--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>easy-react-ssr</title>
 </head>
-<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+<!-- <script src="https://cdn.bootcdn.net/ajax/libs/react/17.0.1/cjs/react.development.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/react-dom/17.0.1/cjs/react-dom.development.js"></script> -->
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <!--server render body-->
+    </div>
 </body>
 </html>
